examples/test/testpolicy19031.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19031
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key43: value47
      key7: value42
      key49: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value46
      podSelector:
        matchLabels:
          key33: value33
          key39: value21
          key36: value42
